# SAM_Python

./: default_values.py  plotparameters.py  pyproject.toml  setup.py  token  tomakepytho.txt  var_to_load_sam_2d.py
mypythonlib.egg-info/: SOURCES.txt  top_level.txt
sam_python/: Parameters.py.OLD  Parameters_ccpp.py  Parameters_dict.py  data_own.py  default_values.py  diurnal.py  figure_own.py  figure_own_2d.py  files_direction_example1.py  forcing_file_common.py  main_example_new_diurnal.py  main_temporal_example1.py  plotparameters.py  temporal_plot.py  two_dimensional.py  var_to_load_sam_lasso.py
sam_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sam_python/var_files/: var_scam.py  var_to_load_ccpp.py  var_to_load_sam.py  var_to_load_sam_core.py  var_to_load_sam_lasso.py
