[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SAM_Python"
version = "0.1.6"
authors = [
  { name="jhonajaam", email="jhonatanjaam@gmail.com" },
]
description = "Program to plot  cloud properties from SAM LES/CRM  "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage"    = "https://github.com/JhonaCode/SAM_Python.git"
"Bug Tracker" = "https://github.com/JhonaCode/SAM_Python.git"
